--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -44,7 +44,7 @@ html, body {
   padding: 25px 20px;
   width: 100%;
   max-width: 350px;
-  min-height: 250px;
+  min-height: 240px;
   text-align: left;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease;
